# wificoin-node

./: .gitignore  LICENSE  README.md  app.js  index.js  package.json  wificoin-node.json
docs/: bus.md  development.md  index.md  node.md  release.md  scaffold.md  services.md  upgrade.md
docs/services/: wificoind.md
lib/: logger.js  node.js  service.js
lib/cli/: bitcore.js  bitcored.js  daemon.js  main.js
lib/insight/insight-api/: package.json
lib/insight/insight-api/bitcore-message/: index.js  package.json
lib/insight/insight-api/bitcore-message/lib/: message.js
lib/insight/insight-api/lib/: addresses.js  blocks.js  index.js  messages.js  status.js  transactions.js  utils.js
lib/insight/insight-ui/: package.json
lib/insight/insight-ui/po/: zh.po
lib/insight/insight-ui/public/: index.html
lib/insight/insight-ui/public/css/: main.css  main.min.css
lib/insight/insight-ui/public/js/: main.js  main.min.js
lib/insight/insight-ui/public/src/css/: common.css
lib/insight/insight-ui/public/src/script/: CMakeLists.txt  README.md  client.json  main.cpp  query_address_balance.sh  threadpool.cpp  threadpool.h  wfc_all_addresses  wfc_rich_list.json
lib/insight/insight-ui/public/views/: address  address.html  block.html  block_list.html  forbes.html  index.html  messages_verify.html  status.html  transaction.html  transaction_sendraw.html
lib/scaffold/: add.js  create.js  default-base-config.js  default-config.js  find-config.js  remove.js  start.js
lib/services/: rpc.js  web.js  wificoind.js
scripts/: download  regtest
(+11 files in other folders)
